<resources>
    <string name="app_name">VSM Watch Android Application</string>
    <string name="title_chart">Chart</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="dropdown">PPG Sensor</string>
    <string name="dropdown2">ECG Decimation</string>

    <!-- Chart Strings -->
    <string name="graph_amplitude">Amplitude</string>
    <string name="graph_magnitude">Magnitude</string>
    <string name="graph_phase">Phase</string>
    <string name="graph_samples">Samples</string>
    <string name="graph_ppg">PPG Data Stream</string>
    <string name="graph_ecg">ECG Data Stream</string>
    <string name="graph_edaMag">EDA Mag. Data Stream</string>
    <string name="graph_edaPhase">EDA Phase Data Stream</string>
    <string name="graph_temp">Temp. Data Stream</string>
    <string name="graph_tempCurr">Temp. (C)</string>
    <string name="graph_acc">ADXL Data Stream</string>


    <!-- Logging Strings -->
    <string name="title_logging">Logging</string>
    <string name="logging_startLogging">Start Logging</string>
    <string name="logging_PPG">PPG</string>
    <string name="logging_ECG">ECG</string>
    <string name="logging_EDA">EDA</string>
    <string name="logging_Accelerometer">Accelerometer</string>
    <string name="logging_Pedometer">Pedometer</string>
    <string name="logging_Temperature">Temperature</string>
    <string name="logging_delete">Delete Data</string>
    <string name="logging_Share">Share Logged Data</string>

    <!-- Setting Strings -->
    <!-- PPG Strings -->
    <string name="PPG_LoadADPD">Load ADPD_x.dcfg</string>
    <string name="PPG_LoadPPG">Load PPG_x.lcfg</string>
    <string name="PPG_LoadADXL">Load ADXL_x.dcfg</string>
    <string name="PPG_AGC">AGC</string>
    <string name="PPG_Decimation">Decimation</string>
    <string name="PPG_Duration">PPG Duration</string>
    <string name="PPG_HR_Duration">HR Duration</string>
    <!-- ECG Strings -->
    <string name="ECG_Frequency">Frequency</string>
    <string name="ECG_Type">Type</string>
    <string name="ECG_Decimation">Decimation</string>
    <string name="ECG_Duration">ECG Duration</string>
    <string name="ECG_HR_Duration">HR Duration</string>
    <!-- EDA Strings -->
    <string name="EDA_Duration">EDA Duration</string>
    <string name="EDA_Filter">Filter</string>

    <string name="title_settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="magnitude_ohms">Magnitude (Ohms)</string>
    <string name="phase_rad">Phase (Rad)</string>
    <string name="magnitude_lsbs">Magnitude (LSBs)</string>
    <string name="amplitude_lsbs">Amplitude (LSBs)</string>

    <string name="textTitle">Please Disconnect and Reconnect the Device or Data Will Be Inaccurate</string>
    <string name="textButton">Okay</string>
</resources>
