<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_chart">

    <fragment
        android:id="@+id/navigation_chart"
        android:name="com.example.vsmwatchandroidapplication.ui.chart.ChartFragment"
        android:label="@string/title_chart"
        tools:layout="@layout/fragment_chart" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.vsmwatchandroidapplication.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_logging"
        android:name="com.example.vsmwatchandroidapplication.ui.logging.LoggingFragment"
        android:label="@string/title_logging"
        tools:layout="@layout/fragment_logging" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.vsmwatchandroidapplication.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>