<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_dark"
    tools:context=".ui.logging.LoggingFragment">

    <TextView
        android:id="@+id/text_StartLogging"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/logging_startLogging"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/switch_startLogging"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/switch_startLogging"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <View
        android:id="@+id/divider_bottom"
        android:layout_width="0dp"
        android:layout_height="5dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_StartLogging" />

    <TextView
        android:id="@+id/logging_PPG"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/logging_PPG"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/switch_PPG"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider_bottom" />

    <Switch
        android:id="@+id/switch_PPG"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider_bottom"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <View
        android:id="@+id/subdivider1"
        android:layout_width="375dp"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"

        android:background="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logging_PPG" />

    <TextView
        android:id="@+id/logging_ECG"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/logging_ECG"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/switch_ECG"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subdivider1" />

    <Switch
        android:id="@+id/switch_ECG"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subdivider1"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <View
        android:id="@+id/subdivider2"
        android:layout_width="375dp"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logging_ECG" />

    <TextView
        android:id="@+id/logging_EDA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/logging_EDA"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/switch_EDA"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subdivider2" />

    <Switch
        android:id="@+id/switch_EDA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subdivider2"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <View
        android:id="@+id/subdivider3"
        android:layout_width="375dp"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logging_EDA" />

    <TextView
        android:id="@+id/logging_Temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/logging_Temperature"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/switch_Temperature"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subdivider3" />

    <Switch
        android:id="@+id/switch_Temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subdivider3"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <Button
        android:id="@+id/DriveButton"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginBottom="32dp"
        android:text="@string/logging_Share"
        app:layout_constraintBottom_toTopOf="@+id/logging_deleteBttn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/logging_deleteBttn"
        android:layout_width="411dp"
        android:layout_height="55dp"
        android:layout_marginBottom="32dp"
        android:text="@string/logging_delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>